Fixed some layout issues

--- a/moviesapi/static/style.css
+++ b/moviesapi/static/style.css
@@ -225,8 +225,6 @@ code {
     margin: 0 0 10px;
     font-size: 13px;
     line-height: 1.42857143;
-    word-break: break-all;
-    word-wrap: break-word;
     color: #000;
     background-color: #f5f5f5;
     border: 1px solid #cccccc;
@@ -239,12 +237,11 @@ pre > code {
     margin: 0 0 10px;
     font-size: 13px;
     line-height: 1.42857143;
-    word-break: break-all;
-    word-wrap: break-word;
     color: #000;
     background-color: #f5f5f5;
     border: 1px solid #cccccc;
     border-radius: 4px;	
+    overflow: auto;
 }
 
 hr {
